# Ontology-RAG-Harmonizer

./: .gitignore  Benchmark_MicrobAIome.ods  Benchmark_MicrobAIome.xlsx  CLAUDE.md  README.md  example_schema_for_SC.csv  example_schema_for_SC.xlsx  local_french_baseline.csv  local_irish_baseline.csv  pyproject.toml  requirements.txt
Evaluation/: Out_16.xlsx  compute_scores.py
Evaluation/LuNikJay_benchmark/: Ontology_Benchmark_Mapping_Julian.xlsx  Ontology_Benchmark_Mapping_Lu.xlsx  Ontology_Benchmark_Mapping_Lucia.xlsx  Ontology_Benchmark_Mapping_Nik.xlsx  Ontology_Benchmark_Mapping_base.xlsx  comparison_matrix_256_Julian.json  comparison_matrix_256_Lu.json  comparison_matrix_256_Nik.json  compute_scores.py  metrics_72.tex  metrics_72.xlsx  process_benchmark.py
RAG_mapper/prompts/: human_prompt_evaluator.md  human_prompt_mapper.md  system_instructions_evaluator-2.md  system_instructions_evaluator-3.md  system_instructions_evaluator.md  system_instructions_mapper-2.md  system_instructions_mapper.md
RAG_mapper/src/: RAG_mapper.py  interactive_review.py  llm_model.py  map_evaluator.py  schema_builder.py
UMLS_mapper/: .gitignore  convert-hf-to-gguf.py  requirements.txt
UMLS_mapper/scripts/: create_faiss_index.py  download_model.py  umls_embedding_local.py  umls_embeddings.py
UMLS_mapper/src/: cli_runner.py  faiss_index.py  umls_search_engine.py
docs/: architecture_c4.md
preprocessing/prompts/: human_prompt_source.md  (+4 more)
results/: french_local_schema.xlsx  french_local_schema_256.xlsx  irish_local_schema.xlsx  irish_local_schema_256.xlsx
(+45 files in other folders)
