[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-rag-harmonizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "faiss-cpu==1.8.0.post1",
    "pandas==2.3.1",
    "pyarrow==16.1.0",
    "scikit-learn==1.7.1",
    "torch==2.7.1",
    "tqdm==4.66.5",
    "transformers==4.52.4",
    "langchain",
    "langchain-core",
    "langchain-ollama",
    "python-dotenv",
    "openpyxl",
    "pydantic",
    "ollama",
    "openai",
    "matplotlib",
    "tenacity",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
exclude = ["UMLS_mapper.llama*", "results*", "docs*"]
